--- a/src/main/resources/templates/community/free-create.html
+++ b/src/main/resources/templates/community/free-create.html
@@ -15,49 +15,49 @@
     <!-- 헤더 -->
     <header th:insert="~{main/header.html :: mainHeader}"></header>
     <!-- 전체 div -->
-    <div class="board">
-        <section class="board-container">
-            <form action="">
-                <div class="register">
-                    <div class="register-container">
-                        <button class="register-btn" type="button" disabled>등록</button>
-                    </div>
-                </div>
-                <label id="photo-picker">
-                    <div class="photo" id="photo">
-                        <input id="file_input" type="file" multiple style="display: none;">
-                        <div class="photo-container">
-                            <div class="photo-img"></div>
-                        </div>
-                    </div>
-                </label>
-                <label id="photo-picker2"></label>
-                <div class="content">
-                    <div class="content-container">
-                        <div class="title">
-                            <div class="title-container">
-                                <label class="title-label">
-                                    <input type="text" placeholder="제목을 입력해주세요." class="title-input">
-                                </label>
-                            </div>
-                        </div>
-                        <div class="line"></div>
-                        <div class="contents">
-                            <span class="contents-span1">
-                                <textarea class="contents-text" placeholder="궁금했던 모든 것을 자유롭게 작성해보세요.
+<!--    <div class="board">-->
+<!--        <section class="board-container">-->
+<!--            <form action="">-->
+<!--                <div class="register">-->
+<!--                    <div class="register-container">-->
+<!--                        <button class="register-btn" type="button" disabled>등록</button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <label id="photo-picker">-->
+<!--                    <div class="photo" id="photo">-->
+<!--                        <input id="file_input" type="file" multiple style="display: none;">-->
+<!--                        <div class="photo-container">-->
+<!--                            <div class="photo-img"></div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </label>-->
+<!--                <label class="img_ul" id="photo-picker2"></label> &lt;!&ndash;이미지 들어가는 곳&ndash;&gt;-->
+<!--                <div class="content">-->
+<!--                    <div class="content-container">-->
+<!--                        <div class="title">-->
+<!--                            <div class="title-container">-->
+<!--                                <label class="title-label">-->
+<!--                                    <input type="text" placeholder="제목을 입력해주세요." class="title-input">-->
+<!--                                </label>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="line"></div>-->
+<!--                        <div class="contents">-->
+<!--                            <span class="contents-span1">-->
+<!--                                <textarea class="contents-text" placeholder="궁금했던 모든 것을 자유롭게 작성해보세요.-->
 
-    예) 봉사 함께하실 심청이 구합니다.
-    예) 후원은 어떻게 하면 되나요?
-                                
-    ※ 주제에 맞지 않는 글이나 커뮤니티 이용정책에 위배되는 글은 신고의 대상이 됩니다.
-    ※ 일정 수 이상의 신고를 받으면 작성한 글이 숨김 및 삭제될 수 있습니다."></textarea>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </section>
-        <div >
+<!--    예) 봉사 함께하실 심청이 구합니다.-->
+<!--    예) 후원은 어떻게 하면 되나요?-->
+<!--                                -->
+<!--    ※ 주제에 맞지 않는 글이나 커뮤니티 이용정책에 위배되는 글은 신고의 대상이 됩니다.-->
+<!--    ※ 일정 수 이상의 신고를 받으면 작성한 글이 숨김 및 삭제될 수 있습니다."></textarea>-->
+<!--                            </span>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </form>-->
+<!--        </section>-->
+<!--        <div >-->
             <div class="modal">
                 <h4 class="modal-title">게시물 등록</h4>
                 <div class="modal-content">게시물을 등록하시겠습니까?</div>
