관리자 작업 중

--- a/src/main/resources/templates/customerCenter/faq.html
+++ b/src/main/resources/templates/customerCenter/faq.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>소통하고 전달하기 - 텀블벅 헬프센터</title>
+    <title>FAQ</title>
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/customerCenter/faq.css">
@@ -24,22 +24,14 @@
                 <nav class="sub_nav">
                     <ol class="breadcrumbs">
                         <li class="breadcrumbs_li">
-                            <a class="breadcrumbs_li_a">텀블벅 헬프센터</a>
-                        </li>
-                        <li class="breadcrumbs_li">
-                            <!-- before -->
-                            <a class="breadcrumbs_li_a">주제별 도움말</a>
-                        </li>
-                        <li class="breadcrumbs_li">
-                            <!-- before -->
-                            <a class="breadcrumbs_li_a">소통하고 전달하기</a>
+                            <a class="breadcrumbs_li_a">자주하는 질문</a>
                         </li>
                     </ol>
                 </nav>
                 <div class="section_container">
                     <section class="section_content">
                         <header class="page_header">
-                            <h2 class="page_header_h2">소통하고 전달하기</h2>
+                            <h2 class="page_header_h2">자주하는 질문</h2>
                         </header>
                         <ul class="article_list">
                             <!-- <li class="article_list_item article_promoted">
