--- a/src/main/resources/templates/admin/payment.html
+++ b/src/main/resources/templates/admin/payment.html
@@ -115,7 +115,7 @@
                             <th>이메일</th>
                             <th>공양미 충전</th>
                             <th>충전일</th>
-                            <th></th>
+                            <th>결제금액</th>
                         </tr>
 <!--                        <tr class="table__content">-->
 <!--                            <td>-->
@@ -188,65 +188,54 @@
             </div>
         </div>
     </div>
-    <section class="modal-stage" style="display: none">
-        <section class="modal">
-            <div class="modal__header">
-                <h3 class="modal__title">결제 상세보기</h3>
-                <a class="modal-close">
-                    <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            data-name="Capa 1"
-                            id="Capa_1"
-                            viewBox="0 0 20 19.84">
-                        <path
-                                d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
-                    </svg>
-                </a>
-            </div>
-            <form class="storage_form" action="">
-                <main class="modal__main">
-                    <div class="modal__profile__top">
-                        <h4>결제 정보</h4>
-                        <div class="user__profile">
-                            <h5>주문번호</h5>
-                            <div class="user__profile__input">
-                                <input type="text" name="" value="12345" readonly="true"/>
-                            </div>
-                        </div>
-                        <div class="user__profile">
-                            <h5>결제일자</h5>
-                            <div class="user__profile__input">
-                                <input type="text" name="" value="2023-03-19" readonly="true"/>
-                            </div>
-                        </div>
-                        <div class="user__profile">
-                            <h5>결제방법</h5>
-                            <div class="user__profile__input">
-                                <input type="text" name="" value="신용카드" readonly="true"/>
-                            </div>
-                        </div>
-                        <div class="user__profile">
-                            <h5>충전 갯수</h5>
-                            <div class="user__profile__input">
-                                <input type="text" name="" value="3000개" readonly="true"/>
-                            </div>
-                        </div>
-                        <div class="user__profile">
-                            <h5>결제금액</h5>
-                            <div class="user__profile__input">
-                                <input type="text" name="" value="100,000원" readonly="true"/>
-                            </div>
-                        </div>
-                        <div class="user__profile__button">
-                            <button id="completeBtn" class="button__type_2 button__color__green">
-                                작성완료
-                            </button>
-                        </div>
-                    </div>
-                </main>
-            </form>
-        </section>
-    </section>
+<!--    <section class="modal-stage" style="display: none">-->
+<!--        <section class="modal">-->
+<!--            <div class="modal__header">-->
+<!--                <h3 class="modal__title">결제 상세보기</h3>-->
+<!--                <a class="modal-close">-->
+<!--                    <svg xmlns="http://www.w3.org/2000/svg" data-name="Capa 1" id="Capa_1" viewBox="0 0 20 19.84">-->
+<!--                        <path d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>-->
+<!--                    </svg>-->
+<!--                </a>-->
+<!--            </div>-->
+<!--            <form class="storage_form" action="">-->
+<!--                <main class="modal__main">-->
+<!--                    <div class="modal__profile__top">-->
+<!--                        <h4>결제 정보</h4>-->
+<!--                        <div class="user__profile">-->
+<!--                            <h5>결제번호</h5>-->
+<!--                            <div class="user__profile__input">-->
+<!--                                <input type="text" name="" value="12345" readonly="true"/>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="user__profile">-->
+<!--                            <h5>결제일자</h5>-->
+<!--                            <div class="user__profile__input">-->
+<!--                                <input type="text" name="" value="2023-03-19" readonly="true"/>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="user__profile">-->
+<!--                            <h5>충전 갯수</h5>-->
+<!--                            <div class="user__profile__input">-->
+<!--                                <input type="text" name="" value="3000개" readonly="true"/>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="user__profile">-->
+<!--                            <h5>결제금액</h5>-->
+<!--                            <div class="user__profile__input">-->
+<!--                                <input type="text" name="" value="100,000원" readonly="true"/>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="user__profile__button">-->
+<!--                            <button id="completeBtn" class="button__type_2 button__color__green">-->
+<!--                                닫기-->
+<!--                            </button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </main>-->
+<!--            </form>-->
+<!--        </section>-->
+<!--    </section>-->
 </section>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
