--- a/src/main/resources/templates/admin/sponsorship-request.html
+++ b/src/main/resources/templates/admin/sponsorship-request.html
@@ -287,17 +287,12 @@
         </section>
     </section>
     <section class="volunteer-modal" style="display: none">
-        <section class="modal">
+        <section class="modal" style="padding: 50px">
             <div class="modal__header">
                 <h3 class="modal__title">후원 신청 명단</h3>
                 <a class="modal-close">
-                    <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            data-name="Capa 1"
-                            id="Capa_1"
-                            viewBox="0 0 20 19.84">
-                        <path
-                                d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" data-name="Capa 1" id="Capa_1" viewBox="0 0 20 19.84">
+                        <path d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
                     </svg>
                 </a>
             </div>
@@ -314,51 +309,52 @@
                                 <input type="text" name="" value="아이디" readonly="true"/>
                             </div>
                         </div>
-                        <div class="user__profile">
-                            <h5></h5>
-                            <div class="user__profile__input volunteer_input">
-                                <input type="text" name="" value="1" readonly="true"/>
-                                <input type="text" name="" value="홍길동" readonly="true"/>
-                                <input type="text" name="" value="01011112222" readonly="true"/>
-                                <input type="text" name="" value="kmg2331" readonly="true"/>
-                            </div>
-                        </div>
-                        <div class="user__profile">
-                            <h5></h5>
-                            <div class="user__profile__input volunteer_input">
-                                <input type="text" name="" value="1" readonly="true"/>
-                                <input type="text" name="" value="홍길동" readonly="true"/>
-                                <input type="text" name="" value="01011112222" readonly="true"/>
-                                <input type="text" name="" value="kmg2331" readonly="true"/>
-                            </div>
-                        </div>
-                        <div class="user__profile">
-                            <h5></h5>
-                            <div class="user__profile__input volunteer_input">
-                                <input type="text" name="" value="1" readonly="true"/>
-                                <input type="text" name="" value="홍길동" readonly="true"/>
-                                <input type="text" name="" value="01011112222" readonly="true"/>
-                                <input type="text" name="" value="kmg2331" readonly="true"/>
-                            </div>
-                        </div>
+                        <div class="append-div"></div>
+<!--                        <div class="user__profile">-->
+<!--                            <h5></h5>-->
+<!--                            <div class="user__profile__input volunteer_input">-->
+<!--                                <input type="text" name="" value="1" readonly="true"/>-->
+<!--                                <input type="text" name="" value="홍길동" readonly="true"/>-->
+<!--                                <input type="text" name="" value="01011112222" readonly="true"/>-->
+<!--                                <input type="text" name="" value="kmg2331" readonly="true"/>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="user__profile">-->
+<!--                            <h5></h5>-->
+<!--                            <div class="user__profile__input volunteer_input">-->
+<!--                                <input type="text" name="" value="1" readonly="true"/>-->
+<!--                                <input type="text" name="" value="홍길동" readonly="true"/>-->
+<!--                                <input type="text" name="" value="01011112222" readonly="true"/>-->
+<!--                                <input type="text" name="" value="kmg2331" readonly="true"/>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="user__profile">-->
+<!--                            <h5></h5>-->
+<!--                            <div class="user__profile__input volunteer_input">-->
+<!--                                <input type="text" name="" value="1" readonly="true"/>-->
+<!--                                <input type="text" name="" value="홍길동" readonly="true"/>-->
+<!--                                <input type="text" name="" value="01011112222" readonly="true"/>-->
+<!--                                <input type="text" name="" value="kmg2331" readonly="true"/>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="user__profile__button" style="margin-top: 20px;">-->
+                        <!--                        <button id="completeBtn" class="button__type_2 button__color__green">-->
+                        <!--                            작성완료-->
+                        <!--                        </button>-->
+                        <!--                    </div>-->
                     </div>
                     <div>
-                        <div class="paging" style="margin-top: 28px; margin-bottom: -57px; text-align: center;">
-                            <a class="changePage" style="color: black"><code><</code></a>
-                            <code id="currentPage">1</code>
-                            <a class="changePage" style="color: black"><code>2</code></a>
-                            <a class="changePage" style="color: black"><code>></code></a>
+                        <div class="paging-modal" style="margin-top: 28px; margin-bottom: -57px; text-align: center;">
+                            <!--                            <a class="changePage" style="color: black"><code><</code></a>-->
+                            <!--                            <code id="currentPage">1</code>-->
+                            <!--                            <a class="changePage" style="color: black"><code>2</code></a>-->
+                            <!--                            <a class="changePage" style="color: black"><code>></code></a>-->
                         </div>
-                        <form name="pageForm">
-                            <input type="hidden">
-                            <input type="hidden">
-                        </form>
-                    </div>
-                    <div class="user__profile__button" style="margin-top: 20px;">
-                        <button id="completeBtn" class="button__type_2 button__color__green">
-                            작성완료
-                        </button>
-                    </div>
+                        <!--                        <form name="pageForm">-->
+                        <!--                            <input type="hidden">-->
+                        <!--                            <input type="hidden">-->
+                        <!--                        </form>-->
                     </div>
                 </main>
             </form>
