--- a/src/main/resources/templates/customerCenter/notice-detail.html
+++ b/src/main/resources/templates/customerCenter/notice-detail.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>공지사항 | 심봉사</title>
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/font/font.css">
@@ -36,17 +36,17 @@
                     <h3 th:text="${notice.noticeTitle}">설 연휴 고객센터 및 공개검토 휴무 안내</h3>
                     <span class="date" th:text="${#temporals.format(notice.createdDate, 'yyyy-MM-dd hh:mm:ss')}">2019-02-01 05:55:37</span>
                 </header>
-                <div class="notice-detail-content" th:text="${notice.noticeContent}">
-                    <p class="">안녕하세요. 텀블벅 커뮤니티팀입니다.</p>
-                    <p class="">&nbsp;</p>
-                    <p class="">이용에 불편을 드려 죄송합니다.</p>
-                    <p class="">2023년 4월 6일(월) 오후 1시 58분경부터 네이버페이 내부 서비스 장애로 인해 네이버페이 결제수단을 이용한 후원 결제가 정상적으로 처리되지 않는 문제가 발생하였습니다.</p>
-                    <p>오후 3시 6분경 서비스 정상 복구를 확인하였습니다.&nbsp;</p>
-                    <p>다시 한 번 결제 시도를 부탁드립니다.</p>
-                    <p class="">&nbsp;</p>
-                    <p class="">감사합니다.</p>
-                    <p class="">&nbsp;</p>
-                    <p class="">텀블벅 커뮤니티팀 드림</p>
+                <div class="notice-detail-content">
+                    <p class="" th:text="${notice.noticeContent}">안녕하세요. 텀블벅 커뮤니티팀입니다.</p>
+                    <p class=""></p>
+<!--                    <p class="">이용에 불편을 드려 죄송합니다.</p>-->
+<!--                    <p class="">2023년 4월 6일(월) 오후 1시 58분경부터 네이버페이 내부 서비스 장애로 인해 네이버페이 결제수단을 이용한 후원 결제가 정상적으로 처리되지 않는 문제가 발생하였습니다.</p>-->
+<!--                    <p>오후 3시 6분경 서비스 정상 복구를 확인하였습니다.&nbsp;</p>-->
+<!--                    <p>다시 한 번 결제 시도를 부탁드립니다.</p>-->
+<!--                    <p class="">&nbsp;</p>-->
+<!--                    <p class="">감사합니다.</p>-->
+<!--                    <p class="">&nbsp;</p>-->
+<!--                    <p class="">텀블벅 커뮤니티팀 드림</p>-->
                 </div>
             </div>
 <!--            <ul class="notice-detail-next-container">-->
@@ -67,7 +67,7 @@
 
 
     
-        <div class="notice-detail-btn-wrap" style="margin-top: 40px">
+        <div class="notice-detail-btn-wrap" style="margin: 40px">
             <button class="notice-detail-btn" onclick="javascript:location.href='/inquiry/notice'">목록으로 돌아가기</button>
         </div>
 
