--- a/src/main/resources/templates/customerCenter/notice.html
+++ b/src/main/resources/templates/customerCenter/notice.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>공지사항 | 텀블벅 - 크리에이터를 위한 크라우드펀딩</title>
+    <title>공지사항 | 심봉사</title>
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/customerCenter/notice.css">
@@ -120,7 +120,7 @@
                     <div class="paging-wrapper">
                         <ul class="paging-wrap">
                             <li th:if="${pageDTO.prev}" class="paging-prev-wrap" title="이전 페이지">
-                                <a th:href="@{/inquiry/notice} + '?page=' + ${pageDTO.startPage - 1}">
+                                <a th:href="@{/inquiry/notice} + '?page=' + ${pageDTO.startPage - 1} + '&searchContent=' + ${searchContent}">
                                     <div class="prev">
                                         <svg viewBox="0 0 48 48">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M32.8912 45.3014L12 23.913L32.8912 2.52471C33.5866 1.8251 34.7804 1.8251 35.4777 2.52471C36.1741 3.22333 36.1741 4.42368 35.4777 5.22224L17.1731 23.913L35.4777 42.7018C36.1741 43.4024 36.1741 44.6018 35.4777 45.4013C35.0788 45.8011 34.6819 46 34.1845 46C33.7855 45.9011 33.2881 45.7002 32.8912 45.3014Z"></path>
@@ -133,7 +133,7 @@
                                     <a rel="nofollow" th:text="${page}">1</a>
                                 </li>
                                 <li th:if="${pageDTO.pageNum != page}" title="2" class="paging-item" tabindex="0">
-                                    <a th:href="@{/inquiry/notice} + '?page=' + ${page}" rel="nofollow" th:text="${page}">2</a>
+                                    <a th:href="@{/inquiry/notice} + '?page=' + ${page} + '&searchContent=' + ${searchContent}" rel="nofollow" th:text="${page}">2</a>
                                 </li>
                             </th:block>
 
@@ -149,7 +149,7 @@
 <!--                            </li>-->
 
                             <li th:if="${pageDTO.next}" title="다음 페이지" tabindex="0" class="paging-next" aria-disabled="false">
-                                <a th:href="@{/inquiry/notice} + '?page=' + ${pageDTO.endPage + 1}">
+                                <a th:href="@{/inquiry/notice} + '?page=' + ${pageDTO.endPage + 1} + '&searchContent=' + ${searchContent}">
                                     <div class="next">
                                         <svg viewBox="0 0 48 48">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M13.9071 46C13.4118 46 12.9164 45.8001 12.6192 45.4003C11.9257 44.7007 11.9257 43.5014 12.6192 42.7019L30.8493 24.0125L12.5201 5.22317C11.8266 4.52357 11.8266 3.32425 12.5201 2.5247C13.2136 1.8251 14.3034 1.8251 15.096 2.5247L36 24.0125L15.195 45.4003C14.7988 45.8001 14.3034 46 13.9071 46Z"></path>
@@ -164,16 +164,17 @@
                     <div class="search-container">
                         <div class="search-wrapper">
                             <span class="search-wrap search-span">
-                                <input type="text" class="search-text" placeholder="검색어를 입력해주세요" autocomplete="off">
-                                    <button class="search-btn-container search-btn-wrapper" style="color: white;">
-                                        <div class="search-btn-wrap">
-                                            <div class="search-btn" name="">
-                                                <svg viewBox="0 0 48 48">
-                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M21.8113 37.22C13.3064 37.22 6.4025 30.3161 6.4025 21.8113C6.4025 13.3064 13.3064 6.4025 21.8113 6.4025C30.3161 6.4025 37.22 13.3064 37.22 21.8113C37.22 30.3161 30.3161 37.22 21.8113 37.22ZM45.3246 42.2229L37.22 34.1172C44.0239 25.6124 42.6231 13.1063 34.1182 6.4025C30.9174 3.70097 26.714 2.20011 22.5117 2H21.8113H21.1109C10.805 2.40023 2.40023 10.7049 2 21.0108V21.7112V22.3115C2.30017 33.2177 11.4053 41.8226 22.3115 41.5225C26.614 41.4224 30.7163 39.9215 34.1182 37.22L42.2229 45.3246C43.1234 46.2251 44.4251 46.2251 45.3246 45.3246C46.2251 44.5242 46.2251 43.1224 45.3246 42.2229Z"></path>
-                                                </svg>
-                                            </div>
+                                <input type="text" class="search-text" th:if="${searchContent != ''}" placeholder="제목으로 검색합니다" autocomplete="off" th:value="${searchContent}">
+                                <input type="text" class="search-text" th:if="${searchContent == ''}" placeholder="제목으로 검색합니다" autocomplete="off">
+                                <button class="search-btn-container search-btn-wrapper" style="color: white;">
+                                    <div class="search-btn-wrap">
+                                        <div class="search-btn" name="">
+                                            <svg viewBox="0 0 48 48">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M21.8113 37.22C13.3064 37.22 6.4025 30.3161 6.4025 21.8113C6.4025 13.3064 13.3064 6.4025 21.8113 6.4025C30.3161 6.4025 37.22 13.3064 37.22 21.8113C37.22 30.3161 30.3161 37.22 21.8113 37.22ZM45.3246 42.2229L37.22 34.1172C44.0239 25.6124 42.6231 13.1063 34.1182 6.4025C30.9174 3.70097 26.714 2.20011 22.5117 2H21.8113H21.1109C10.805 2.40023 2.40023 10.7049 2 21.0108V21.7112V22.3115C2.30017 33.2177 11.4053 41.8226 22.3115 41.5225C26.614 41.4224 30.7163 39.9215 34.1182 37.22L42.2229 45.3246C43.1234 46.2251 44.4251 46.2251 45.3246 45.3246C46.2251 44.5242 46.2251 43.1224 45.3246 42.2229Z"></path>
+                                            </svg>
                                         </div>
-                                    </button>
+                                    </div>
+                                </button>
                             </span>
                         </div>
                     </div>
@@ -189,5 +190,6 @@
     let notices = [[${noticeDTOS}]];
 </script>
 <script src="/js/main/header.js"></script>
+<script src="/js/admin/admin-service.js"></script>
 <script src="/js/customerCenter/notice.js"></script>
 </html>
